# simplexhc-cpp

./: .gitignore  CMakeLists.txt  README.md  default.nix
bench/: ackerman-worker-wrapper-optimised.stg  compare-o0-and-o3.sh  compile-and-run-program.sh  factorial-worker-wrapper-optimised.stg  fibonacci-worker-wrapper-optimised.stg
docs/: Doxyfile.in
include/sxhc/: LazyCodegen.h  RuntimeDebugBuilder.h  StackAnalysis.h  libstg.h  mir.h  optimizer.h  stgir.h  types.h
lib/: libstg.c  optimizer.cpp
programs/: compile-and-run-program.sh  lit.cfg  simple-case  simple-case.stg  sum-type-case.stg  two-slot-case  two-slot-case.stg
simplexhc-ghc-plugin/: .gitignore  README.md  simplexhc-ghc-plugin.cabal  stack.yaml
simplexhc-ghc-plugin/app/: Main.hs
simplexhc-ghc-plugin/src/: SimplexhcGHCPlugin.hs
src/: LazyCodegen.cpp  RuntimeDebugBuilder.cpp  StackAnalysis.cpp  cxxopts.hpp  jit.h  lexer.l  main.cpp  parser.yy  stgir.cpp  stgir.h
test/: .gitignore  ackerman-worker-wrapper-optimised.stg  ackerman.stg  case-alt-capture-var.stg  case-boxed-alt-capture-var.stg  case-prim-alt-capture-var.stg  case-scrutinee-literal.stg  clean.sh  compile-and-run-program.sh  compose-simple.stg  compose.stg  factorial-worker-wrapper-optimised.stg  factorial.stg  free-params.stg  hello.stg  k-combinator.stg  lit.cfg  multiply-intrinsic.stg  multiply.stg  nested-case-alts.stg  nested-nonrecursive-datatypes.stg  partial-apply-let.stg  prim-case.stg  recursive-type-decl.stg  seq.stg  simple-ap-prim-ints.stg  simple-case.stg  simple-let.stg  subtract.stg  sum-type-case.stg  tear-through-simple-recursion.stg  tunnel-through-cases.stg  two-slot-case.stg
